Fixed scaling on mobile

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ input {
     margin-left: 25px;
 }
 button {
-    scale: 150%;
+    scale: 110%;
     margin: 5px;
     margin-left: 65px;
 }
@@ -21,7 +21,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    scale: 150%;
+    scale: 110%;
 }
 html {
     color-scheme: dark;
